# xtalopt-dependencies

./: .gitmodules  CMakeLists.txt
cmake/: External_boost.cmake  External_eigen3.cmake  External_libxml2.cmake  External_openbabel.cmake  External_rdkit.cmake
